--- a/package.json
+++ b/package.json
@@ -1,11 +1,55 @@
 {
   "name": "react-newline-to-break",
   "version": "1.0.0",
-  "description": "Convert newlines '\\n' to <br />. made for React",
-  "main": "index.js",
+  "description": "Convert newlines '\\n' to <br />. Made for React",
+  "main": "lib/nl2br.min.js",
   "scripts": {
-    "test": "mocha"
+    "dev": "webpack --watch",
+    "build": "webpack",
+    "test": "karma start",
+    "tdd": "karma start --auto-watch --no-single-run",
+    "prepublish": "npm run build"
   },
-  "author": "",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Stychen/React-Newline-to-Break.git"
+  },
+  "keywords": [
+    "react",
+    "nl2br",
+    "newline",
+    "break"
+  ],
+  "homepage": "https://github.com/Stychen/React-Newline-to-Break/blob/master/README.md",
+  "author": "Stychen Tan <stychentan@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/yosuke-furukawa/react-nl2br/issues"
+  },
+  "dependencies": {
+    "react": "^15.3.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.18.0",
+    "babel-eslint": "^7.1.0",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "clean-webpack-plugin": "^0.1.13",
+    "eslint": "^3.9.0",
+    "eslint-loader": "^1.6.0",
+    "eslint-plugin-react": "^6.4.1",
+    "isparta-loader": "^2.0.0",
+    "karma": "^1.3.0",
+    "karma-coverage": "^1.1.1",
+    "karma-mocha": "^1.2.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.26",
+    "karma-tap": "^3.1.1",
+    "karma-webpack": "^1.8.0",
+    "mocha": "^3.1.2",
+    "webpack": "^1.13.3",
+    "webpack-merge": "^0.15.0"
+  }
 }
