--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-newline-to-break",
   "version": "1.0.4",
-  "description": "Convert newlines '\\n' to break '&lt; br &gt;'. Made for React",
+  "description": "Convert newlines '\\n' to break '&lt; brreact-newline-to-break &gt;'. Made for React",
   "main": "lib/nl2br.min.js",
   "scripts": {
     "dev": "webpack --watch",
